--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 .bio{
     column-count: 2;
+    column-span: 4;
     column-gap: 40px;
     column-rule-style: solid;
     background-color: lightblue;
